# shockmac

./: .travis-build.sh  .travis-install-deps.sh  .travis.yml  Cargo.toml  appveyor.yml
ShockMac/Game Src/: AIRUPT.C  AMAPLOOP.C  CITRES.C  DIGIFX.C  FRTERR.C  FULLSCRN.C  GAMELOOP.C  GAMEREND.C  GAMESYS.C  GAMEWRAP.C  GR2SS.C  HKEYFUNC.C  HUD.C  INIT.C  INPUT.C  INVENT.C  LEANMETR.C  MAINLOOP.C  MFDFUNC.C  MLIMBS.C  MUSICAI.C  OBJECTS.C  OBJSIM.C  OBJUSE.C  PHYSICS.C  PLAYER.C  SAVELOAD.C  SCHEDULE.C  SCREEN.C  SETUP.C  SIDEICON.C  SNDCALL.C  STATUS.C  TOOLS.C  TRIGGER.C  VMAIL.C  WEAPONS.C  WRAPPER.C
ShockMac/Game Src/Headers/: FROSLEW.H  MLIMBS.H  TOOLS.H
ShockMac/Libraries/2D/: TestInitMac.c
ShockMac/Libraries/2D/Source/: 2dTest.c  PERMAP.C
ShockMac/Libraries/AFILE/Source/: MovConv.c  MovConvDiv.c  QUIKCONV.C
ShockMac/Libraries/EDMS/Source/: SOLITON.CC
ShockMac/Libraries/FIX/Source/: FIX.C  FIX.H  FixAsm.s
ShockMac/Libraries/FIXPP/Source/: FIXPP.CC  FIXPP.H
ShockMac/Libraries/H/: keydefs.h
ShockMac/Libraries/INPUT/Source/: MOUSE.C
ShockMac/Libraries/PALETTE/Source/: PALETTE.C
ShockMac/Libraries/PALETTE/Tests/: TestInitMac.c
ShockMac/Libraries/RES/Source/: REFACC.C  RES.C  RES.H
ShockMac/Libraries/RND/Source/: RND.C
ShockMac/Libraries/SND/Source/: DIG_OPS.C  LGSNDX.H  MID_INIT.C  MID_OPS.C
ShockMac/Libraries/SND/Tests/: SndCaps.c
ShockMac/Libraries/UI/Source/: CURSORS.C  EVENT.C  GADGETS.C  QBOXGADG.C  (+3 more)
ShockMac/Mac Src/: InitMac.c  MacTune.c  MoviePlay.c  Prefs.c  Shock.c  ShockBitmap.c  ShockDialogs.c  ShockHelp.c  Tests.c
src/: main.rs
(+5 files in other folders)
